--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,11 +1,6 @@
 {
-    "extends": [
-        "stylelint-config-standard"
-    ],
-    "plugins": [
-        "stylelint-scss",
-        "stylelint-csstree-validator"
-    ],
+    "extends": ["stylelint-config-standard"],
+    "plugins": ["stylelint-scss", "stylelint-csstree-validator"],
     "rules": {
         "at-rule-no-unknown": null,
         "scss/at-rule-no-unknown": true,
@@ -17,6 +12,5 @@
         "**/reset*.css",
         "**/bootstrap*.css",
         "assets/**"
-
     ]
 }
